--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,14 +1,11 @@
 :root {
   --font-body: Arial, Helvetica, sans-serif;
   --font-headline: Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  /* colors */
   --primary-color: #f0a868;
   --secondary-color: #525b0f;
   --tertiary-color: #8a470c;
   --light-grey: #d0d0d0;
   --dark-grey: #303030;
-
-  /* sizes */
   --font-base: 18px;
   --small-font: 0.8em;
   --large-font: 1.2em;
@@ -75,7 +72,6 @@ p {
   font-size: var(--small-font);
   width: 110px;
   height: 80px;
-
   flex-direction: column;
   align-items: flex-end;
   box-shadow: 1px 1px 4px var(--light-grey);
@@ -94,12 +90,12 @@ p {
   margin-top: -1.7em;
 }
 
-/* utility classes */
 .highlight {
   color: var(--tertiary-color);
 }
 
-button {
+button,
+#addToCart {
   padding: 0.5em 2em;
   background-color: var(--secondary-color);
   color: white;
@@ -108,15 +104,17 @@ button {
   border: 0;
   font-size: var(--large-font);
   cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+#addToCart:hover {
+  background-color: var(--tertiary-color);
 }
 
 .divider {
   border-bottom: 2px solid var(--primary-color);
 }
 
-/* End utility classes */
-
-/* Cart icon styles */
 .cart {
   padding-top: 1em;
   position: relative;
@@ -130,8 +128,6 @@ button {
 .cart:hover svg {
   fill: gray;
 }
-
-/* End cart icon styles */
 
 .mission {
   position: absolute;
@@ -168,7 +164,6 @@ button {
   color: var(--dark-grey);
 }
 
-/* Styles for product lists */
 .product-card {
   flex: 1 1 45%;
   margin: 0.25em;
@@ -191,8 +186,6 @@ button {
   font-size: 1em;
 }
 
-/* End product list card */
-
 .product-detail {
   padding: 1em;
   max-width: 500px;
@@ -203,12 +196,10 @@ button {
   width: 100%;
 }
 
-/* Start cart list card styles */
 .cart-card {
   display: grid;
   grid-template-columns: 25% auto 15%;
   font-size: var(--small-font);
-  /* max-height: 120px; */
   align-items: center;
 }
 
@@ -241,16 +232,28 @@ button {
   grid-column: 3;
 }
 
+#cart-empty {
+  text-align: center;
+  color: var(--tertiary-color);
+  font-size: var(--large-font);
+  padding: 1em;
+}
+
+.error-message {
+  text-align: center;
+  color: red;
+  font-size: var(--large-font);
+  padding: 1em;
+}
+
 @media screen and (min-width: 500px) {
   body {
     max-width: 1080px;
     margin: auto;
   }
-
   .mission {
     font-size: 1.2em;
   }
-
   .cart-card {
     font-size: inherit;
     grid-template-columns: 150px auto 15%;
